adding nested resources

--- a/app/views/channels/index.html.erb
+++ b/app/views/channels/index.html.erb
@@ -1,4 +1,4 @@
-<h3><%= link_to 'Locations', locations_path %></h3>
+<h3><%= link_to 'Go to Locations', locations_path %></h3>
 
 <% @channels.each do |channel| %>
     <h2>id: <%= channel.id %> | <%= channel.name %></h2>
