--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -1,4 +1,4 @@
-<h3><%= link_to 'Channels', channels_path %></h3>
+<h3><%= link_to 'Go to Channels', channels_path %></h3>
 
 <% @locations.each do |location| %>
     <h2>id: <%= location.id %> / <%= location.name %> /  <%= location.location %></h2>
